<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/tv_bottomSheetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/choose_method_to_upload_image"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/li_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_gallery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/li_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_photo_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
