<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.component.addNewWeather.AddNewWeatherFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_tittle_back" />

    <include
        android:id="@+id/errorView"
        layout="@layout/error_view_layout"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <include
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loadingDialog"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        layout="@layout/view_dialog_loading"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardWeather"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:elevation="0dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivWeather"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_transparent" />

            </FrameLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Egypt"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCurrentWeatherTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="19C"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWeatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="Cloudy"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvCurrentWeatherTemp"
            app:layout_constraintStart_toEndOf="@+id/tvCurrentWeatherTemp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTempMinConst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tempMin"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTempMin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWeatherCondition"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTempMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tempMin"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTempMinConst"
            app:layout_constraintTop_toBottomOf="@+id/tvWeatherCondition" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTempMaxConst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tempMax"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvTempMax"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTempMin"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTempMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tempMin"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTempMinConst"
            app:layout_constraintTop_toBottomOf="@+id/tvTempMin" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWindSpeedConst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/windSpeed"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvWindSpeed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTempMax"

            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWindSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tempMin"
            android:textAlignment="viewStart"
            android:textColor="@color/whiteColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvWindSpeedConst"
            app:layout_constraintTop_toBottomOf="@+id/tvTempMax" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/color_3c5a9a"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.01"
        android:visibility="gone"
        android:text="@string/sharePhoto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/whiteColor"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clContent" />


</androidx.constraintlayout.widget.ConstraintLayout>
